--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
         <div class="content-area">
             <div class="text-home">
                 <p class="sub-heading text-grey">The Essence of</p>
-                <h1 class="main-heading text-brown">Natural Beauty</h1>
+                <h1 class="main-heading text-brown">Natural </h1>
                 <p class="sub-heading text-grey mb-5">A surreal experience</p>
             </div>
         </div>
+
 </section>
 
 <section id="home2" class="home">
@@ -243,6 +244,28 @@
 
 <section id="booking" class="booking">
         <div class="container">
+            <div id="carouselExampleIndicators" style="padding-bottom: 125px" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="./img/banner.jpeg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./img//banner-1.jpeg" alt="Second slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             <div class="row">
                 <div class="col-12 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1.3s" style="visibility: visible; animation-delay: 700ms; animation-name: fadeInUp;">
                     <div class="booking_text text-center">
@@ -254,10 +277,13 @@
                         
                     </div>
                 </div>
+                <iframe style="margin-top: 125px;" width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Linienstra%C3%9Fe%2079%20D%C3%BCsseldorf+(U%C4%9Fur%20%C3%84nderungsschneiderei)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://masterarbeitschreiben.com/'>MasterarbeitSchreiben.com</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=911c79812236c423bef5bddf00839fc8dba7679d'></script>
+
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbdirTML_1Vg2PjqJhURkUwTeaIdvVXuE&callback=myMap"></script>
+
             </div>
         </div>
-
-    </section>
+</section>
 
 <section id="footer" class="footer">
         <div class="container">
